force-app/main/default/objects/Blood_Request__c/fields/Attender_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Attender_Contact_No__c</fullName>
    <label>Attender Contact No</label>
    <type>Phone</type>
</CustomField>