force-app/main/default/objects/Blood_Request__c/fields/Attender_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Attender_Email_Id__c</fullName>
    <label>Attender Email Id</label>
    <type>Email</type>
</CustomField>