force-app/main/default/objects/Blood_Request__c/fields/Attender_Name__c.field-meta.xml
<CustomField>
    <fullName>Attender_Name__c</fullName>
    <label>Attender Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>