force-app/main/default/objects/Blood_Request__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Mysore</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Salem</fullName>
            </value>
            <value>
                <fullName>Palakkad</fullName>
            </value>
            <value>
                <fullName>Thrishur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>