force-app/main/default/objects/Blood_Request__c/fields/Hospital_Address__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Address__c</fullName>
    <label>Hospital Address</label>
    <type>TextArea</type>
</CustomField>