force-app/main/default/objects/Blood_Request__c/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <label>Hospital Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>