force-app/main/default/objects/Blood_Request__c/fields/Nature_of_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Treatment__c</fullName>
    <label>Nature of Treatment</label>
    <type>TextArea</type>
</CustomField>