force-app/main/default/objects/Blood_Request__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <label>Patient Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>